CSS/main.css
/* ... */
.hitPoints input {
	flex-grow: 1;
}
.currentHitPoints {
	border-bottom-left-radius: 0em;
	border-bottom-right-radius: 0em;
}
.hitPointMaximum {
	display: flex;
	align-items: center;
	gap: 0.5em;
}
.hitPointMaximum span {
	width: 27ch;
}
.temporaryHitPoints {
	border-top-left-radius: 0em;
	border-top-right-radius: 0em;
}

/* -- Hit Dice */

.hitDice {
	grid-area: hitDice;
	display: flex;
	flex-direction: column;
	align-items: stretch;
}
.totalHitDice {
	display: flex;
	align-items: center;
	gap: 0.5em;
}

/* -- Death Saves */

.deathSaves {
	grid-area: deathSaves;
	display: flex;
	flex-direction: column;
	align-items: stretch;
}
.deathSaves__deathSaveTypes {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: center;
	gap: 0.5em;
}
.deathSaves__deathSaveType {
	display: flex;
	align-items: center;
	gap: 0.5em;
}
.deathSaves__deathSaveType > * {
	flex-basis: 0em;
	flex-grow: 1;
}
.deathSaves__deathSaveType span {
	text-align: center;
}
.deathSaves__inputsContainer {
	display: flex;
	align-items: center;
	justify-content: space-between;
}
.deathSaves__inputsContainer--success input[name="tripleCheckbox"][value="1"] ~ label:nth-last-of-type(n+3) {
	background-color: var(--success-color);
}
.deathSaves__inputsContainer--success input[name="tripleCheckbox"][value="2"] ~ label:nth-last-of-type(n+2) {
	background-color: var(--success-color);
}
.deathSaves__inputsContainer--success input[name="tripleCheckbox"][value="3"] ~ label:nth-last-of-type(n+1) {
	background-color: var(--success-color);
}
.deathSaves__inputsContainer--failure input[name="tripleCheckbox"][value="1"] ~ label:nth-last-of-type(n+3) {
	background-color: var(--danger-color);
}
.deathSaves__inputsContainer--failure input[name="tripleCheckbox"][value="2"] ~ label:nth-last-of-type(n+2) {
	background-color: var(--danger-color);
}
.deathSaves__inputsContainer--failure input[name="tripleCheckbox"][value="3"] ~ label:nth-last-of-type(n+1) {
	background-color: var(--danger-color);
}

/* Personality */

.personality {
	grid-area: personality;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: 1em;
}
.personality > * {
	flex-basis: 0em;
	flex-grow: 1;
	display: flex;
	flex-direction: column;
}
.personality textarea {
	flex-grow: 1;
}
.personality > *:nth-child(1) {
	border-bottom-left-radius: 0em;
	border-bottom-right-radius: 0em;
}
.personality > *:nth-child(2), .personality > *:nth-child(3) {
	border-radius: 0em;
}
.personality > *:nth-child(4) {
	border-top-left-radius: 0em;
	border-top-right-radius: 0em;
}

/* Attacks */

.attacks {
	grid-area: attacks;
	display: flex;
	flex-direction: column;
	align-items: stretch;
}
.weapons {
	border-spacing: 0.5em;
}
.weapons th:nth-child(1) {
	width: 12ch;
}
.weapons th:nth-child(2) {
	width: 9ch;
}
.attacks__notes {
	flex-grow: 1;
}

/* Features And Traits */

.featuresAndTraits {
	grid-area: featuresAndTraits;
	display: flex;
	flex-direction: column;
}
.featuresAndTraits__featButtonsContainer {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	gap: 0.5em;
}
.featuresAndTraits__featButtonsContainer:empty {
	display: none;
}
.featuresAndTraits__featButton {
	display: flex;
	align-items: center;
	gap: 0.5em;
}
.featuresAndTraits__featButton span {
	flex-grow: 1;
}
.featuresAndTraits textarea {
	flex-grow: 1;
}

/* Passive Wisdom and Other Proficiencies And Languages */

.passivePerceptionAndOtherProficienciesAndLanguages {
	grid-area: passivePerceptionAndOtherProficienciesAndLanguages;
	display: flex;
	flex-direction: column;
	gap: 1em;
}
.otherProficienciesAndLanguages {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
}
.otherProficienciesAndLanguages textarea {
	flex-grow: 1;
}

/* Equipment */

.equipment {
	display: grid;
	grid-template-columns: auto 1fr;
	grid-template-areas: 
		"currencies equipment__notes"
		"box__heading box__heading";
}
.currencies {
	grid-area: currencies;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	gap: 0.5em;
}
.currency {
	display: flex;
	align-items: center;
	gap: 0.5em;
}
.currency label {
	width: 2.5ch;
}
.currency input {
	width: 5ch
}
.equipment__notes {
	grid-area: equipment__notes;
}
.equipment .box__heading {
	grid-area: box__heading;
}

